.k8s/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gateway
  name: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
      - name: gateway
        image: gateway:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 4000
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 4000
          initialDelaySeconds: 25
          periodSeconds: 10
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 4000
          initialDelaySeconds: 35
          periodSeconds: 10
        lifecycle:
          preStop:
            exec:
              command: [ "sh", "-c", "sleep 10" ]
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gateway
  name: gateway
spec:
  selector:
    app: gateway
  ports:
    - port: 4000
      targetPort: 4000
